# json_logger_loki

./: .flake8  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-lint.yml  tests.yml
json_logger/: README.md  __init__.py  logger.py  setup.py
json_logger_loki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_logger.py
